fixed double border in kitchen show form

--- a/app/assets/stylesheets/components/_booking-form.scss
+++ b/app/assets/stylesheets/components/_booking-form.scss
@@ -26,6 +26,7 @@
 .form-booking-control {
   background-color: white;
   position: relative;
+  border: 1px solid #e4e4e4;
 }
 
 .la-tuerie {
